Add unit tests, bump NeoForge to 26.1.2.109, use JDK 25 in CI
- Add JUnit 5 + Mockito unit tests and wire them into build.gradle
- Bump neo_version from 26.1.2.77 to 26.1.2.109
- Run CI on JDK 25 to match the Java 25 toolchain
- Replace template README with project docs and update CLAUDE.md

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>